# python-template

./: .gitignore  pyproject.toml
mycode/: __init__.py  __main__.py  logging.py
mycode/api/: __init__.py  hello.py  home.py  index.py
mycode/api/firewall/: portforward.py
mycode/cli/: __init__.py  check.py  cli.py  dropdb.py  initdb.py  options.py
tests/api/: test_init.py
